# moder_cpp_challenge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LessonsLearned.md  OpenQuestions.md  README.md  REQUIREMENTS.md
13_computing_pi/: .gitignore  CMakeLists.txt  compute_pi.cpp
19_adding_to_a_container/: .gitignore  CMakeLists.txt  adding_to_a_container.cpp
20_contains_any_all_none/: .gitignore  CMakeLists.txt  contains_any_all_none.cpp
22_literals_temperature_scales/: .gitignore  CMakeLists.txt  literals_temperature_scales  literals_temperature_scales.cpp  temperature_literals.h
37_finding_files/: CMakeLists.txt  finding_files.cpp
43_meeting_time_multiple_timezones/: CMakeLists.txt  meeting_times.cpp
61_parallel_transform/: CMakeLists.txt  parallel_transforms.cpp
75_data_to_json/: CMakeLists.txt  data_to_json.cpp
77_printing_to_pdf/: CMakeLists.txt  printing_to_pdf.cpp
