cmake_minimum_required(VERSION 3.10)
project (modern_cpp_challenge)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

add_subdirectory(13_computing_pi)
add_subdirectory(19_adding_to_a_container)
add_subdirectory(20_contains_any_all_none)
add_subdirectory(22_literals_temperature_scales)
